[package]
name = "pwm-pca9685"
version = "0.3.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/pwm-pca9685-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the PCA9685 I2C 16-channel, 12-bit PWM/Servo/LED controller."
readme = "README.md"
keywords = ["pwm", "servo", "led", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/pwm-pca9685-rs"
documentation = "https://docs.rs/pwm-pca9685"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2018"

[badges]
travis-ci = { repository = "eldruin/pwm-pca9685-rs", branch = "master" }
coveralls = { repository = "eldruin/pwm-pca9685-rs", branch = "master", service = "github" }

[dependencies]
embedded-hal = "1.0.0-alpha.2"
nb = "0.1"

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.7"

[profile.release]
lto = true

[patch.crates-io]
embedded-hal = { git = "https://github.com/ryankurte/embedded-hal", branch = "fix/pwm-channel-by-ref" }

#linux-embedded-hal = { git = "https://github.com/eldruin/linux-embedded-hal", branch = "embedded-hal-1.0.0-alpha.1" }
